WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71720
WebGLContextEvent.initEvent should be removed
https://bugs.webkit.org/show_bug.cgi?id=71720
Summary
WebGLContextEvent.initEvent should be removed
Dominic Cooney
Reported
2011-11-07 12:23:41 PST
Per the spec here: <
http://www.khronos.org/registry/webgl/specs/latest/#5.14
>
Attachments
Patch
(3.23 KB, patch)
2011-11-09 15:21 PST
,
Dominic Cooney
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2011-11-07 15:06:08 PST
It would probably make more sense to just remove it, and get the spec updated.
Kenneth Russell
Comment 2
2011-11-08 19:08:33 PST
(In reply to
comment #1
)
> It would probably make more sense to just remove it, and get the spec updated.
Agreed; however, the WebGL spec is being snapshotted, and this update may need to wait for the next version. It may make sense to update the WebKit implementation to track the current one while this is happening. Either way, applications shouldn't be accessing this constructor so any change is unlikely to affect real world apps.
Adam Barth
Comment 3
2011-11-08 21:24:45 PST
We should delete it now so folks don't end up relying upon it.
Sam Weinig
Comment 4
2011-11-09 09:36:05 PST
(In reply to
comment #3
)
> We should delete it now so folks don't end up relying upon it.
I agree.
Dominic Cooney
Comment 5
2011-11-09 15:07:54 PST
I will remove initEvent for now. The bug against the WebGL spec to use a constructor instead of initWebGLContextEvent is <
http://www.khronos.org/bugzilla/show_bug.cgi?id=550
>. Based on the outcome of this bug we can add a constructor or reinstitute this method with the correct name.
Dominic Cooney
Comment 6
2011-11-09 15:21:29 PST
Created
attachment 114375
[details]
Patch
Adam Barth
Comment 7
2011-11-09 15:26:43 PST
Comment on
attachment 114375
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=114375&action=review
> Source/WebCore/ChangeLog:13 > + No new tests--removing untested code.
I see.
WebKit Review Bot
Comment 8
2011-11-09 15:42:39 PST
Comment on
attachment 114375
[details]
Patch Rejecting
attachment 114375
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ge conflict in Tools/ChangeLog Failed to merge in the changes. Patch failed at 0001 Source/WebKit/chromium: Fix crash by handling case when AccessibilityObject::lineForPosition When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 157. Full output:
http://queues.webkit.org/results/10399126
WebKit Review Bot
Comment 9
2011-11-09 16:12:08 PST
Comment on
attachment 114375
[details]
Patch Clearing flags on attachment: 114375 Committed
r99780
: <
http://trac.webkit.org/changeset/99780
>
WebKit Review Bot
Comment 10
2011-11-09 16:12:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug