Remove WebGLContextEvent.initEvent method https://bugs.webkit.org/show_bug.cgi?id=71720

Reviewed by Adam Barth.

The WebGL spec calls this method initWebGLContextEvent, but it may
adopt a constructor instead. Deleting the initEvent method for now
since it is definitely wrong and we don't want people to come to
depend on it.

No new tests--removing untested code.

* html/canvas/WebGLContextEvent.cpp:
* html/canvas/WebGLContextEvent.h:
* html/canvas/WebGLContextEvent.idl:


Canonical link: https://commits.webkit.org/88345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99780 268f45cc-cd09-0410-ab3c-d52691b4dbfc